--- a/src/ui/fxml/splash-screen.fxml
+++ b/src/ui/fxml/splash-screen.fxml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane fx:id="splashPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="362.0" prefWidth="585.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
-      <Label fx:id="progress" text="Progress" BorderPane.alignment="CENTER" />
-   </center>
+<BorderPane fx:id="splashPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="538.0" prefWidth="719.0" styleClass="preloader" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainGUI">
+   <left>
+      <Label id="preloader-lbl" fx:id="progress" text="Cargando..." BorderPane.alignment="BOTTOM_CENTER">
+         <BorderPane.margin>
+            <Insets bottom="120.0" left="90.0" />
+         </BorderPane.margin></Label>
+   </left>
+   <bottom>
+      <ProgressBar fx:id="preloaderPBar" minHeight="0.0" prefHeight="11.0" prefWidth="710.0" progress="0.0" BorderPane.alignment="CENTER" />
+   </bottom>
 </BorderPane>
