--- a/src/ui/fxml/main-view.fxml
+++ b/src/ui/fxml/main-view.fxml
@@ -9,21 +9,23 @@
 
 <VBox alignment="CENTER" prefHeight="782.0" prefWidth="352.0" spacing="10.0" styleClass="vbox" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="150.0" fitWidth="200.0" onMouseClicked="#carClicked" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../resources/car-front.png" />
          </image>
       </ImageView>
       <Label styleClass="app-title" text="La Ceiba" />
       <Label styleClass="subtitle" text="Lavadero y Parqueadero" />
-      <Button mnemonicParsing="false" text="Iniciar sesión" />
-      <Separator opacity="0.0" orientation="VERTICAL" prefHeight="75.0" prefWidth="6.0" />
-      <Button mnemonicParsing="false" text="Clientes" />
-      <Button mnemonicParsing="false" text="Vehículos" />
-      <Button mnemonicParsing="false" text="Mapa" />
-      <Separator opacity="0.0" orientation="VERTICAL" prefHeight="57.0" prefWidth="4.0" />
-      <Button mnemonicParsing="false" text="Usuarios" />
-      <Button mnemonicParsing="false" text="Facturación" />
-      <Button mnemonicParsing="false" text="Reportes" />
+      <Button mnemonicParsing="false" onAction="#loginClicked" text="Iniciar sesión" />
+      <Separator opacity="0.0" orientation="VERTICAL" prefHeight="22.0" prefWidth="5.0" />
+      <Button mnemonicParsing="false" onAction="#clientsClicked" text="Clientes" />
+      <Button mnemonicParsing="false" onAction="#vehiclesClicked" text="Vehículos" />
+      <Button mnemonicParsing="false" onAction="#mapClicked" text="Mapa" />
+      <Separator opacity="0.0" orientation="VERTICAL" prefHeight="47.0" prefWidth="8.0" />
+      <Button mnemonicParsing="false" onAction="#usersClicked" text="Usuarios" />
+      <Button mnemonicParsing="false" onAction="#receiptsClicked" text="Facturación" />
+      <Button mnemonicParsing="false" onAction="#reportsClicked" text="Reportes" />
+      <Separator opacity="0.0" orientation="VERTICAL" prefHeight="22.0" prefWidth="5.0" />
+      <Button mnemonicParsing="false" onAction="#exitClicked" text="Salir" />
    </children>
 </VBox>
