--- a/src/ui/fxml/clients-view.fxml
+++ b/src/ui/fxml/clients-view.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="0.0" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <TableView minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn prefWidth="75.0" text="Nombre" />
-          <TableColumn prefWidth="75.0" text="Identificación" />
-            <TableColumn prefWidth="75.0" text="Teléfono" />
-            <TableColumn prefWidth="75.0" text="Habilitado" />
+          <TableColumn minWidth="0.0" prefWidth="75.0" text="Nombre" />
+          <TableColumn minWidth="0.0" prefWidth="75.0" text="Identificación" />
+            <TableColumn minWidth="0.0" prefWidth="75.0" text="Teléfono" />
+            <TableColumn minWidth="0.0" prefWidth="75.0" text="Habilitado" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -21,10 +21,10 @@
       </TableView>
    </center>
    <right>
-      <VBox alignment="CENTER" prefHeight="553.0" prefWidth="220.0" spacing="10.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Añadir" />
-            <Button mnemonicParsing="false" text="Borrar" />
+            <Button minWidth="0.0" mnemonicParsing="false" text="Añadir" />
+            <Button minWidth="0.0" mnemonicParsing="false" text="Borrar" />
          </children></VBox>
    </right>
 </BorderPane>
