--- a/src/ui/fxml/vehicles-view.fxml
+++ b/src/ui/fxml/vehicles-view.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="0.0" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <TableView minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn prefWidth="75.0" text="Tipo" />
           <TableColumn prefWidth="75.0" text="Estadía" />
@@ -23,13 +23,13 @@
       </TableView>
    </center>
    <right>
-      <VBox alignment="CENTER" prefHeight="553.0" prefWidth="220.0" spacing="10.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Editar" />
-            <Button mnemonicParsing="false" text="Añadir" />
-            <Button mnemonicParsing="false" text="Borrar" />
+            <Button minWidth="0.0" mnemonicParsing="false" text="Editar" />
+            <Button minWidth="0.0" mnemonicParsing="false" text="Añadir" />
+            <Button minWidth="0.0" mnemonicParsing="false" text="Borrar" />
             <Separator opacity="0.0" orientation="VERTICAL" prefHeight="59.0" prefWidth="0.0" />
-            <Button mnemonicParsing="false" text="Generar Factura" />
+            <Button minWidth="0.0" mnemonicParsing="false" text="Generar Factura" />
          </children></VBox>
    </right>
 </BorderPane>
