--- a/src/ui/fxml/user-view.fxml
+++ b/src/ui/fxml/user-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -20,11 +21,15 @@
       </TableView>
    </center>
    <right>
-      <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" styleClass="vbox" BorderPane.alignment="CENTER">
          <children>
             <Button minWidth="0.0" mnemonicParsing="false" text="Añadir" />
             <Button minWidth="0.0" mnemonicParsing="false" text="Borrar" />
             <Button minWidth="0.0" mnemonicParsing="false" text="Editar" />
          </children></VBox>
    </right>
+   <stylesheets>
+      <URL value="@../css/main.css" />
+      <URL value="@../css/databases.css" />
+   </stylesheets>
 </BorderPane>
