--- a/src/ui/fxml/receipt-gen.fxml
+++ b/src/ui/fxml/receipt-gen.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -9,81 +12,89 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="800.0" prefWidth="420.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" prefHeight="800.0" prefWidth="420.0" spacing="10.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label text="Generación de recibo:" />
       <HBox alignment="CENTER" prefHeight="60.0" prefWidth="413.0" spacing="10.0">
          <children>
-            <CheckBox alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" selected="true" text="Recibo mensual" />
+            <CheckBox alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#toggleMonthly" selected="true" text="Recibo mensual" />
          </children>
       </HBox>
       <Separator opacity="0.0" orientation="VERTICAL" prefHeight="59.0" prefWidth="0.0" />
-      <VBox alignment="CENTER" minHeight="0.0" minWidth="0.0" prefHeight="429.0" prefWidth="413.0" spacing="15.0">
+      <VBox fx:id="monthlyVBox" alignment="CENTER" minHeight="0.0" minWidth="0.0" prefHeight="429.0" prefWidth="413.0" spacing="15.0" styleClass="foreground">
          <children>
             <HBox alignment="CENTER" minHeight="0.0" minWidth="0.0" prefHeight="60.0" prefWidth="413.0" spacing="10.0">
                <children>
-                  <Label minHeight="0.0" minWidth="0.0" text="Factura de venta numero: ####AAAA" />
+                  <Label minHeight="0.0" minWidth="0.0" styleClass="secondary-label" text="Factura de venta numero: ####AAAA" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="60.0" prefWidth="413.0" spacing="10.0">
                <children>
-                  <Label minHeight="0.0" minWidth="0.0" text="Ciudad de venta:" />
+                  <Label minHeight="0.0" minWidth="0.0" styleClass="secondary-label" text="Ciudad de venta:" />
                   <TextField minHeight="0.0" minWidth="0.0" prefHeight="31.0" prefWidth="108.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="60.0" prefWidth="413.0" spacing="10.0">
                <children>
-                  <Label minHeight="0.0" minWidth="0.0" text="Valor pagado: $###.###" />
+                  <Label minHeight="0.0" minWidth="0.0" styleClass="secondary-label" text="Valor pagado: $###.###" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="60.0" prefWidth="413.0" spacing="10.0">
                <children>
-                  <Label minHeight="0.0" minWidth="0.0" text="Fecha de facturación:" />
+                  <Label minHeight="0.0" minWidth="0.0" styleClass="secondary-label" text="Fecha de facturación:" />
                   <DatePicker minHeight="0.0" minWidth="0.0" prefHeight="31.0" prefWidth="119.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="60.0" prefWidth="413.0" spacing="10.0">
                <children>
-                  <Label minHeight="0.0" minWidth="0.0" text="Nombre del cliente:" />
+                  <Label minHeight="0.0" minWidth="0.0" styleClass="secondary-label" text="Nombre del cliente:" />
                   <TextField minHeight="0.0" minWidth="0.0" prefHeight="31.0" prefWidth="108.0" />
                </children>
             </HBox>
-            <Label minHeight="0.0" minWidth="0.0" prefHeight="64.0" prefWidth="257.0" text="Vechiculo por el que se paga: AAAAAA" />
-            <Label minHeight="0.0" minWidth="0.0" prefHeight="54.0" prefWidth="147.0" text="Tiempo de estadía: ##" />
+            <Label minHeight="0.0" minWidth="0.0" prefHeight="64.0" prefWidth="257.0" styleClass="secondary-label" text="Vechiculo por el que se paga: AAAAAA" />
+            <Label minHeight="0.0" minWidth="0.0" prefHeight="43.0" styleClass="secondary-label" text="Tiempo de estadía: ##" wrapText="true" />
          </children>
+         <VBox.margin>
+            <Insets left="5.0" right="5.0" />
+         </VBox.margin>
       </VBox>
-      <VBox alignment="CENTER" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="413.0" spacing="15.0">
+      <VBox alignment="CENTER" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="413.0" spacing="15.0" styleClass="foreground" visible="false">
          <children>
             <HBox alignment="CENTER" minHeight="0.0" minWidth="0.0" prefHeight="60.0" prefWidth="413.0" spacing="10.0">
                <children>
-                  <Label minHeight="0.0" minWidth="0.0" text="Tipo de vehículo:" />
-                  <ChoiceBox minHeight="0.0" minWidth="0.0" prefHeight="31.0" prefWidth="121.0" visible="false" />
+                  <Label minHeight="0.0" minWidth="0.0" styleClass="secondary-label" text="Tipo de vehículo:" />
+                  <ChoiceBox minHeight="0.0" minWidth="0.0" prefHeight="31.0" prefWidth="121.0" stylesheets="@../css/choicebox-dark.css" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="60.0" prefWidth="413.0" spacing="10.0">
                <children>
-                  <Label minHeight="0.0" minWidth="0.0" text="Fecha de facturación:" />
-                  <DatePicker minHeight="0.0" minWidth="0.0" prefHeight="31.0" prefWidth="119.0" visible="false" />
+                  <Label minHeight="0.0" minWidth="0.0" styleClass="secondary-label" text="Fecha de facturación:" />
+                  <DatePicker minHeight="0.0" minWidth="0.0" prefHeight="31.0" prefWidth="119.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="60.0" prefWidth="413.0" spacing="10.0">
                <children>
-                  <Label minHeight="0.0" minWidth="0.0" text="Valor pagado: $###.###" />
+                  <Label minHeight="0.0" minWidth="0.0" styleClass="secondary-label" text="Valor pagado: $###.###" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="60.0" prefWidth="413.0" spacing="10.0">
                <children>
-                  <Label minHeight="0.0" minWidth="0.0" text="Placa del vehículo:" />
+                  <Label minHeight="0.0" minWidth="0.0" styleClass="secondary-label" text="Placa del vehículo:" />
                   <TextField minHeight="0.0" minWidth="0.0" prefHeight="31.0" prefWidth="108.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="60.0" prefWidth="413.0" spacing="10.0">
                <children>
-                  <Label minHeight="0.0" minWidth="0.0" text="Total de horas:" />
+                  <Label minHeight="0.0" minWidth="0.0" styleClass="secondary-label" text="Total de horas:" />
                   <TextField minHeight="0.0" minWidth="0.0" prefHeight="31.0" prefWidth="108.0" />
                </children>
             </HBox>
          </children>
       </VBox>
+      <Button mnemonicParsing="false" text="Generar" />
    </children>
+   <stylesheets>
+      <URL value="@../css/main.css" />
+      <URL value="@../css/receipts.css" />
+   </stylesheets>
 </VBox>
