--- a/src/ui/css/main.css
+++ b/src/ui/css/main.css
@@ -34,7 +34,7 @@
 
 .button {
 	-fx-pref-width: 128px;
-	-fx-pref-height: 8px;
+	-fx-min-height: 8px;
 	-fx-background-color: #536DFE;
 	-fx-text-fill: #FFFFFF;
 	-fx-background-radius: 15px;
@@ -65,6 +65,22 @@
 
 .current-scene {
 	-fx-background-color: #bde1f2;
+}
+
+.text-field {
+	-fx-background-radius: 12;
+	-fx-prompt-text-fill: #e4e8f5;
+	-fx-background-color: #536DFE;
+}
+
+.background {
+	-fx-background-color: #03A9F4;
+	-fx-background-radius: 15;
+}
+
+.foreground {
+	-fx-background-color: #B3E5FC;
+	-fx-background-radius: 15;
 }
 
 #container {
