--- a/src/ui/fxml/clients-view.fxml
+++ b/src/ui/fxml/clients-view.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -8,12 +10,12 @@
 
 <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="0.0" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <TableView minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="clientsTBV" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn minWidth="0.0" prefWidth="75.0" text="Nombre" />
-          <TableColumn minWidth="0.0" prefWidth="75.0" text="Identificación" />
-            <TableColumn minWidth="0.0" prefWidth="75.0" text="Teléfono" />
-            <TableColumn minWidth="0.0" prefWidth="75.0" text="Habilitado" />
+          <TableColumn fx:id="clientsNameCOL" minWidth="0.0" prefWidth="75.0" text="Nombre" />
+          <TableColumn fx:id="clientsIDCOL" minWidth="0.0" prefWidth="75.0" text="Identificación" />
+            <TableColumn fx:id="clientsPhoneCOL" minWidth="0.0" prefWidth="75.0" text="Teléfono" />
+            <TableColumn fx:id="clientEnabledCOL" minWidth="0.0" prefWidth="75.0" text="Habilitado" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -21,10 +23,17 @@
       </TableView>
    </center>
    <right>
-      <VBox alignment="CENTER" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" styleClass="background" BorderPane.alignment="CENTER">
          <children>
-            <Button minWidth="0.0" mnemonicParsing="false" text="Añadir" />
-            <Button minWidth="0.0" mnemonicParsing="false" text="Borrar" />
-         </children></VBox>
+            <Button minWidth="0.0" mnemonicParsing="false" onAction="#addClient" text="Añadir" />
+            <Button fx:id="clientDeleteBTN" minWidth="0.0" mnemonicParsing="false" onAction="#deleteClient" text="Borrar" />
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </BorderPane.margin></VBox>
    </right>
+   <stylesheets>
+      <URL value="@../css/main.css" />
+      <URL value="@../css/databases.css" />
+   </stylesheets>
 </BorderPane>
