--- a/src/ui/fxml/login.fxml
+++ b/src/ui/fxml/login.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="800.0" prefWidth="352.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="800.0" prefWidth="352.0" spacing="10.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" VBox.vgrow="ALWAYS">
          <image>
@@ -25,17 +25,17 @@
       <HBox alignment="CENTER" prefHeight="59.0" prefWidth="352.0" spacing="10.0">
          <children>
             <Label text="Usuario:" />
-            <TextField prefHeight="37.0" prefWidth="138.0" />
+            <TextField fx:id="loginUserTF" prefHeight="37.0" prefWidth="138.0" />
          </children>
       </HBox>
       <HBox alignment="CENTER" prefHeight="59.0" prefWidth="352.0" spacing="10.0">
          <children>
             <Label text="Contraseña:" />
-            <PasswordField prefHeight="37.0" prefWidth="137.0" />
+            <PasswordField fx:id="loginPassPWF" prefHeight="37.0" prefWidth="137.0" />
          </children>
       </HBox>
       <Separator opacity="0.0" orientation="VERTICAL" prefHeight="57.0" prefWidth="4.0" />
-      <Button mnemonicParsing="false" text="Iniciar sesión" />
-      <Button mnemonicParsing="false" text="Registro" />
+      <Button mnemonicParsing="false" onAction="#loginClicked" text="Iniciar sesión" />
+      <Button mnemonicParsing="false" onAction="#registerClicked" text="Registro" />
    </children>
 </VBox>
