--- a/src/ui/fxml/user-view.fxml
+++ b/src/ui/fxml/user-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -9,11 +10,11 @@
 
 <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <TableView maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="usersTBV" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn prefWidth="75.0" text="Nombre" />
-            <TableColumn prefWidth="75.0" text="Usuario" />
-          <TableColumn prefWidth="75.0" text="Identificación" />
+          <TableColumn fx:id="userNameCOL" prefWidth="75.0" text="Nombre" />
+            <TableColumn fx:id="userUsernameCOL" prefWidth="75.0" text="Usuario" />
+          <TableColumn fx:id="userIDCOL" prefWidth="75.0" text="Identificación" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -21,12 +22,15 @@
       </TableView>
    </center>
    <right>
-      <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" styleClass="vbox" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" styleClass="background" BorderPane.alignment="CENTER">
          <children>
-            <Button minWidth="0.0" mnemonicParsing="false" text="Añadir" />
-            <Button minWidth="0.0" mnemonicParsing="false" text="Borrar" />
-            <Button minWidth="0.0" mnemonicParsing="false" text="Editar" />
-         </children></VBox>
+            <Button minWidth="0.0" mnemonicParsing="false" onAction="#addUser" text="Añadir" />
+            <Button fx:id="userDeleteBTN" minWidth="0.0" mnemonicParsing="false" onAction="#deleteUser" text="Borrar" />
+            <Button fx:id="userEditBTN" minWidth="0.0" mnemonicParsing="false" onAction="#editUser" text="Editar" />
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </BorderPane.margin></VBox>
    </right>
    <stylesheets>
       <URL value="@../css/main.css" />
