--- a/src/ui/fxml/vehicles-view.fxml
+++ b/src/ui/fxml/vehicles-view.fxml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="0.0" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane id="container" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="0.0" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <TableView minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="vechiclesTBV" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn prefWidth="75.0" text="Tipo" />
-          <TableColumn prefWidth="75.0" text="Estadía" />
-            <TableColumn prefWidth="75.0" text="Placa" />
-            <TableColumn prefWidth="75.0" text="Puesto" />
-            <TableColumn prefWidth="75.0" text="Habilitado" />
+          <TableColumn fx:id="vehicleTypeCOL" prefWidth="75.0" text="Tipo" />
+          <TableColumn fx:id="vehicleStayCOL" prefWidth="75.0" text="Estadía" />
+            <TableColumn fx:id="vehiclePlateCOL" prefWidth="75.0" text="Placa" />
+            <TableColumn fx:id="vehicleSlotCOL" prefWidth="75.0" text="Puesto" />
+            <TableColumn fx:id="vehicleEnabledCOL" prefWidth="75.0" text="Habilitado" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -23,13 +24,18 @@
       </TableView>
    </center>
    <right>
-      <VBox alignment="CENTER" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" styleClass="background" BorderPane.alignment="CENTER">
          <children>
-            <Button minWidth="0.0" mnemonicParsing="false" text="Editar" />
-            <Button minWidth="0.0" mnemonicParsing="false" text="Añadir" />
-            <Button minWidth="0.0" mnemonicParsing="false" text="Borrar" />
-            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="59.0" prefWidth="0.0" />
-            <Button minWidth="0.0" mnemonicParsing="false" text="Generar Factura" />
-         </children></VBox>
+            <Button fx:id="vehicleEditBTN" minWidth="0.0" mnemonicParsing="false" onAction="#editVehicle" text="Editar" />
+            <Button minWidth="0.0" mnemonicParsing="false" onAction="#addVehicle" text="Añadir" />
+            <Button fx:id="vehicleDeleteBTN" minWidth="0.0" mnemonicParsing="false" onAction="#deleteVehicle" text="Borrar" />
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </BorderPane.margin></VBox>
    </right>
+   <stylesheets>
+      <URL value="@../css/main.css" />
+      <URL value="@../css/databases.css" />
+   </stylesheets>
 </BorderPane>
